fixing swagger (masih error)
